# fast-clipboard-manager

./: Cargo.toml  README.md
fast_clipboard/: Cargo.toml
fast_clipboard/src/: config.rs  entry.rs  lib.rs  store.rs
fast_clipboard_daemon/: Cargo.toml
fast_clipboard_daemon/src/: clipboard.rs  main.rs
fast_clipboard_gui/: Cargo.toml
fast_clipboard_gui/src/: gui.rs  main.rs  ws_client.rs
fast_clipboard_gui/src/components/: dialog.rs  mod.rs
fastclipd/: Cargo.toml
fastclipd/src/: clipboard.rs  main.rs  server.rs  tracker.rs
src/: app.rs  app_copy.rs  clipboard.rs  config.rs  lib.rs  main.rs  os_clipboard.rs  os_clipboard_handler.rs  styles.css  ui.rs
src/app/: custom_widgets.rs  fonts.rs  mod.rs  spacing.rs  widgets.rs
src/composite_templates/: mod.rs
src/composite_templates/application_window/: window.ui
src/composite_templates/clipboard_entry/: entry.ui  imp.rs  mod.rs
src/composite_templates/list_box_row/: imp.rs  mod.rs
src/composite_templates/model/: imp.rs  mod.rs
src/composite_templates/row_data/: imp.rs  mod.rs
src/composite_templates/window/: imp.rs  mod.rs  window.ui
