[package]
name = "tiled-clipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10.1"
chrono = "0.4.23"
clipboard = "0.5.0"
clipboard-master = "3.1.3"
env_logger = "0.10.0"
gtk = "0.17.0"
home = "0.5.4"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
temp-file = "0.1.7"
thiserror = "1.0.38"
