[package]
name = "fast_clipboard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
chacha20poly1305 = "0.10.1"
chrono = "0.4.23"
env_logger = "0.10.0"
home = "0.5.4"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
temp-file = "0.1.7"
thiserror = "1.0.38"

