[package]
name = "fast_clipboard_gui"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
anyhow = "1.0.69"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["full"] }
fast_clipboard = { path = "../fast_clipboard" }
relm4 = "0.5.1"
relm4-components = "0.5.1"
jsonrpsee = { version = "0.16.2", features = ["ws-client", "macros"] }

[[bin]]
name = "gui"
path = "src/main.rs"
