[package]
name = "fastclipd"
version = "0.1.0"
edition = "2021"

[dependencies]
fast_clipboard = { path = "../fast_clipboard" }
wl-clipboard-rs = "0.7.0"
env_logger = "0.10.0"
log = "0.4.17"
jsonrpsee = { path = "../../../rust/jsonrpsee/jsonrpsee", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-native-tls"] }
home = "0.5.4"
anyhow = "1.0.70"
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3.27"
tokio-stream = "0.1.12"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

[[bin]]
name = "daemon"
path = "src/main.rs"
